fix(message-topic-card): Remove participant avatar gap

--- a/common/common.scss
+++ b/common/common.scss
@@ -117,7 +117,6 @@
 .message-topic-card__participant {
   display: inline-flex;
   align-items: center;
-  gap: 0.5em;
   font-size: var(--font-down-1);
 
   .avatar {
